--- a/Tree Wars/Assembly-CSharp.csproj
+++ b/Tree Wars/Assembly-CSharp.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\lobbyMenuScript.cs" />
      <Compile Include="Assets\Scripts\TinyTreeScript.cs" />
      <Compile Include="Assets\Scripts\WebSocketScript.cs" />
      <Compile Include="Assets\Scripts\PlayerScript.cs" />
@@ -47,7 +48,7 @@
      <Compile Include="Assets\Scripts\SpawnScript.cs" />
      <Compile Include="Assets\Scripts\Units.cs" />
      <Compile Include="Assets\Scripts\UnitBehaviors.cs" />
-     <Compile Include="Assets\Scripts\lobbyMenuScript.cs" />
+     <Compile Include="Assets\Scripts\SearchingScript.cs" />
      <None Include="Assets\Knight Files\Read Me.txt" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
     <Reference Include="UnityEngine">
